--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,76 +1,143 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
+/* http://meyerweb.com/eric/tools/css/reset/ */
 
-html {
-  text-size-adjust: none;
-}
+/* v1.0 | 20080212 */
 
+html,
 body,
+div,
+span,
+applet,
+object,
+iframe,
 h1,
 h2,
 h3,
 h4,
+h5,
+h6,
 p,
-figure,
 blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+font,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
 dl,
-dd {
-  margin-block-end: 0;
-}
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+input,
+td {
+  margin: 0;
+  padding: 0;
+  border: 0;
 
-ul[role="list"],
-ol[role="list"] {
-  list-style: none;
+  font-size: 100%;
+  vertical-align: baseline;
+
+  background: transparent;
+  outline: 0;
 }
 
 body {
-  min-height: 100vh;
-  line-height: 1.5;
+  line-height: 1;
 }
 
-h1,
-h2,
-h3,
-h4,
-button,
-input,
-label {
-  line-height: 1.1;
+ol,
+ul {
+  list-style: none;
 }
 
-h1,
-h2,
-h3,
-h4 {
-  text-wrap: balance;
+blockquote,
+q {
+  quotes: none;
 }
 
-a:not([class]) {
-  color: currentcolor;
-  text-decoration-skip-ink: auto;
+blockquote::before,
+blockquote::after,
+q::before,
+q::after {
+  content: "";
+  content: none;
 }
 
-img,
-picture {
-  display: block;
-  max-width: 100%;
+/* remember to define focus styles! */
+:focus {
+  outline: 0;
 }
 
-input,
-button,
-textarea,
-select {
+/* remember to highlight inserts somehow! */
+ins {
+  text-decoration: none;
+}
+
+del {
+  text-decoration: line-through;
+}
+
+/* tables still need 'cellspacing="0"' in the markup */
+table {
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+
+button {
+  padding: 0;
+  border: none;
+
   font-family: inherit;
-  font-size: inherit;
+
+  background: none;
+  outline: none;
 }
 
-textarea:not([rows]) {
-  min-height: 10em;
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  appearance: none;
 }
 
-:target {
-  scroll-margin-block: 5ex;
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: all 50000s ease-in-out 0s;
 }
