--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,14 +1,16 @@
-/* http://meyerweb.com/eric/tools/css/reset/ */
-
-/* v1.0 | 20080212 */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 html,
 body,
 div,
 span,
-applet,
 object,
 iframe,
+figure,
 h1,
 h2,
 h3,
@@ -19,43 +21,24 @@ p,
 blockquote,
 pre,
 a,
-abbr,
-acronym,
-address,
-big,
-cite,
 code,
-del,
-dfn,
 em,
-font,
 img,
-ins,
-kbd,
-q,
-s,
-samp,
 small,
 strike,
 strong,
 sub,
 sup,
 tt,
-var,
 b,
 u,
 i,
-center,
-dl,
-dt,
-dd,
 ol,
 ul,
 li,
 fieldset,
 form,
 label,
-legend,
 table,
 caption,
 tbody,
@@ -63,17 +46,33 @@ tfoot,
 thead,
 tr,
 th,
-input,
-td {
+td,
+main,
+canvas,
+embed,
+footer,
+header,
+nav,
+section,
+video {
   margin: 0;
   padding: 0;
   border: 0;
 
+  font: inherit;
   font-size: 100%;
+  -webkit-font-smoothing: antialiased;
+  text-size-adjust: none;
+  text-rendering: optimizelegibility;
   vertical-align: baseline;
+}
 
-  background: transparent;
-  outline: 0;
+footer,
+header,
+nav,
+section,
+main {
+  display: block;
 }
 
 body {
@@ -98,46 +97,12 @@ q::after {
   content: none;
 }
 
-/* remember to define focus styles! */
-:focus {
-  outline: 0;
-}
-
-/* remember to highlight inserts somehow! */
-ins {
-  text-decoration: none;
-}
-
-del {
-  text-decoration: line-through;
-}
-
-/* tables still need 'cellspacing="0"' in the markup */
 table {
   border-spacing: 0;
   border-collapse: collapse;
 }
 
-button {
-  padding: 0;
-  border: none;
-
-  font-family: inherit;
-
-  background: none;
-  outline: none;
-}
-
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration {
+input {
+  border-radius: 0;
   appearance: none;
-}
-
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-  transition: all 50000s ease-in-out 0s;
 }
