--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,6 +11,7 @@ $input-filled-bg-hover: #f3f4f6;
 $bg-hover: #fafafa;
 $bg-focus: #fff;
 $bg-disabled: #f3f4f6;
+$bg-error: #fceded;
 
 // Границы
 $border-color: #d1d5db;
