--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -105,4 +105,11 @@ table {
 input {
   border-radius: 0;
   appearance: none;
+
+  &:-webkit-autofill,
+  &:-webkit-autofill:hover,
+  &:-webkit-autofill:focus,
+  &:-webkit-autofill:active {
+    transition: background-color 50000s ease-in-out 0s;
+  }
 }
